k8s-node+mongo/loginapp_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login-app
  labels:
    app: joker
spec:
  replicas: 2
  selector:
    matchLabels:
      app: joker
  template:
    metadata:
      labels:
        app: joker
    spec:
      containers:
      - name: nodeapp
        image: anilkumarkolla10/loginapp:v1
        ports:
          - containerPort: 7500
	  value: mongo.devops-poc.svc.cluster.local
        resources:
          limits:
            cpu: "1"
            memory: "1Gi"
          requests:
            cpu: "500m"
            memory: "500Mi"
